--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="last_name">Επώνυμο</string>
     <string name="first_name">Όνομα</string>
     <string name="email">Email</string>
-    <string name="login">Login</string>
-    <string name="register">Εγγραφή</string>
+    <string name="login">Εισοδος</string>
+    <string name="register">Εγγραφη</string>
     <string name="address">Διεύθυνση</string>
     <string name="address_number">Νούμερο</string>
     <string name="postal_code">Τ.Κ.</string>
@@ -15,4 +15,5 @@
     <string name="country">Χώρα</string>
     <string name="phone">Σταθερό</string>
     <string name="mobilePhone">Κινητό</string>
+    <string name="remember_me">Αποθήκευση στοιχείων</string>
 </resources>
