--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,31 @@
 <resources>
     <string name="app_name">HomeDeco</string>
+    <string name="username">Όνομα Χρήστη</string>
+    <string name="password">Κωδικός</string>
+    <string name="last_name">Επώνυμο</string>
+    <string name="first_name">Όνομα</string>
+    <string name="email">Email</string>
+    <string name="login">Εισοδος</string>
+    <string name="register">Εγγραφη</string>
+    <string name="address">Διεύθυνση</string>
+    <string name="address_number">Νούμερο</string>
+    <string name="postal_code">Τ.Κ.</string>
+    <string name="city">Πόλη</string>
+    <string name="state">Νομός</string>
+    <string name="country">Χώρα</string>
+    <string name="phone">Σταθερό</string>
+    <string name="mobilePhone">Κινητό</string>
+    <string name="remember_me">Αποθήκευση στοιχείων</string>
+    <string name="content_description">ImageView</string>
+    <string name="message">Μήνυμα:</string>
+    <string name="settings">Ρυθμίσεις</string>
+    <string name="logout">Αποσύνδεση</string>
+    <string name="about_us">Λίγα λόγια..</string>
+    <string name="how_to">Οδηγίες</string>
+    <string name="default_product_name">Product Name</string>
+    <string name="default_product_price">Product Price</string>
+    <string name="default_product_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
+    <string name="default_product_short_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed</string>
+    <string name="buy_now">Buy now</string>
+    <string name="add_to_cart">Add to cart</string>
 </resources>
