--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="buy_now">Buy now</string>
     <string name="add_to_cart">Add to cart</string>
     <string name="products">Προϊόντα</string>
+    <string name="title_activity_cart">cart</string>
 </resources>
