--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,12 +22,41 @@
     <string name="logout">Αποσύνδεση</string>
     <string name="about_us">Λίγα λόγια..</string>
     <string name="how_to">Οδηγίες</string>
-    <string name="default_product_name">Product Name</string>
-    <string name="default_product_price">Product Price</string>
+    <string name="default_product_name">Όνομα</string>
+    <string name="default_product_price">Τιμή</string>
     <string name="default_product_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
     <string name="default_product_short_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed</string>
     <string name="buy_now">Buy now</string>
     <string name="add_to_cart">Add to cart</string>
     <string name="products">Προϊόντα</string>
-    <string name="title_activity_cart">cart</string>
+    <string name="productDetails">Προϊόν</string>
+    <string name="cart">Καλάθι</string>
+    <string name="title_activity_cart">Καλάθι</string>
+    <string name="chat">Συνομιλία</string>
+    <string name="category">Κατηγορία</string>
+
+    <string-array name="product_filters_category">
+        <item>Γραφείο</item>
+        <item>Καθιστικό</item>
+        <item>Υπνοδωμάτιο</item>
+    </string-array>
+
+    <string-array name="product_filters_subCategory_desk">
+        <item>Αποθήκευση γραφείου</item>
+        <item>Γραφεία</item>
+        <item>Καρέκλες γραφείου</item>
+    </string-array>
+
+    <string-array name="product_filters_subCategory_livingRoom">
+        <item>Έπιπλα τηλεόρασης</item>
+        <item>Καναπέδες</item>
+        <item>Τραπέζια σαλονιού</item>
+    </string-array>
+
+    <string-array name="product_filters_subCategory_bedroom">
+        <item>Κρεβάτια</item>
+        <item>Ντουλάπες</item>
+        <item>Συρταριέρες αποθήκευσης</item>
+    </string-array>
+
 </resources>
