--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,8 +26,8 @@
     <string name="default_product_price">Τιμή</string>
     <string name="default_product_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
     <string name="default_product_short_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed</string>
-    <string name="buy_now">Buy now</string>
-    <string name="add_to_cart">Add to cart</string>
+    <string name="buy_now">Αγορα</string>
+    <string name="add_to_cart">Προσθηκη στο καλαθι</string>
     <string name="products">Προϊόντα</string>
     <string name="productDetails">Προϊόν</string>
     <string name="cart">Καλάθι</string>
