ADDED:     Dialog prompt on checkout     Generic Menu     Main Activity UI changes     Activity reroutes     Register activity is now accessible only from login activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">HomeDeco</string>
+    <string name="app_name">HomeDecor</string>
     <string name="username">Όνομα Χρήστη</string>
     <string name="password">Κωδικός</string>
     <string name="last_name">Επώνυμο</string>
@@ -34,6 +34,8 @@
     <string name="title_activity_cart">Καλάθι</string>
     <string name="chat">Συνομιλία</string>
     <string name="category">Κατηγορία</string>
+    <string name="checkoutDialog_title">Αγορά ως..</string>
+    <string name="noAccount_goToRegister">Δεν έχετε λογαριασμό; Εγγραφή εδώ</string>
 
     <string-array name="product_filters_category">
         <item>Κατηγορία</item>
